<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/puzzle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Fragments.PuzzleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_puzzle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:enabled="true"
            android:text="@string/pass"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:enabled="true"
            android:text="@string/check_answer"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solutionLength" />

        <TextView
            android:id="@+id/solutionLength"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:gravity="bottom|center_horizontal"
            android:letterSpacing="0.25"
            android:textSize="18sp"
            android:typeface="monospace"
            android:textIsSelectable="false"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_answer" />

        <EditText
            android:id="@+id/et_answer"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorWhite"
            android:gravity="bottom|left"
            android:inputType="textVisiblePassword"
            android:letterSpacing="0.25"
            android:selectAllOnFocus="true"
            android:textSize="28sp"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_picture" />

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="165dp"
            app:layout_constraintBottom_toTopOf="@+id/pb_picture_retrieval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/blurred" />

        <ProgressBar
            android:id="@+id/pb_picture_retrieval"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="26dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_picture" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_finished"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_finished_message"
            android:layout_width="305dp"
            android:layout_height="75dp"
            android:text="@string/finished_message"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/finished_message" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="232dp"
            android:layout_height="235dp"
            android:src="@drawable/memeface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.784" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
